# audio-features

./: .gitignore  .releaserc.json  LICENSE  README.md  __init__.py  app.py  audio_mfcc.spec  mfcc_extractor.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yml
audio_features/: __init__.py  app.py  schema.json  tests.py
audio_mfcc/: app.py  schema.json
